Add Final Version of CMS Workflow Comment System

--- a/views/playground/workflow-comments/final-approver/base.html.twig
+++ b/views/playground/workflow-comments/final-approver/base.html.twig
@@ -148,8 +148,10 @@
                     {% else %}
                         <h1 class="main-title u-display-inline-block main-title-progresslist">{{ heading|default('MISSING HEADING') }}</h1>
                     {% endif %}
-                    {% block progresslist %}{% endblock %}
+
                     {% block tabs_list %}{% endblock %}
+                    {% block progresslist %}{% endblock %}
+                    {% block panel %}{% endblock %}
                     {% block tabs_content %}{% endblock %}
                 </div>
             </div>
