--- a/views/playground/workflow-comments/final-approver/tab_reject.html.twig
+++ b/views/playground/workflow-comments/final-approver/tab_reject.html.twig
@@ -19,7 +19,7 @@
                         'icon': 'save'
                     },
                     {
-                        'label': 'Submit for approval',
+                        'label': 'Send for approval',
                         'href': 'index.html.twig',
                         'icon': 'hand-o-right'
                     }
@@ -70,7 +70,7 @@
     }}
     {{
         html.button({
-            'label': 'Submit for Approval',
+            'label': 'Send for Approval',
             'class': 'btn--primary',
             'data-toggle': 'modal',
             'type': 'link',
@@ -88,44 +88,7 @@
         }
     </style>
 
-    {% if _get.note is defined %}
-        {% set note = '"' ~ _get.note ~ '"' %}
-    {% else %}
-        {% set note = ' No comments left ' %}
-    {% endif %}
 
-    {{
-        html.panel({
-            'title': 'Content Rejected',
-            'body': '
-            <div class="timeline__item" data-timestamp="2018-03-29T10:59:04+00:00" data-id="2650349">
-                <div class="timeline-avatar timeline-avatar--user">
-                    <span>YZ</span>
-                </div>
-                <div class="timeline-content">
-                    <div class="timeline-content__inner">
-                        <h4 class="timeline-content__title">Yves Zelman:
-
-                        </h4>
-
-                        <div class="timeline-content__date">
-                            <i data-toggle="tooltips" title="" aria-hidden="true" class="icon-clock-o icon--info u-hidden-print cursor-help" data-original-title="29 Mar 2018, 11:59 AM"></i>
-                            <time class="u-visible-print-inline">29 Mar 2018, 11:59 AM</time>
-                            <time class="timeago u-hidden-print" datetime="Thu, 29 Mar 2018 11:59:04 +0100" data-timezone="Europe/London">Thursday 29th March 2018 (11:59)</time>
-                        </div>
-
-                        <div class="timeline-content__body" data-id="2650349">
-                            <p id="message-120530" class="timeline-content__text">
-                                ' ~ note ~ '
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>',
-            'icon': 'close',
-            'class': 'panel--danger u-margin-top-none'
-        })
-    }}
 
     {{
         form.create()
@@ -232,7 +195,7 @@ Cras eget elit maximus, facilisis ante sed, feugiat mi. Morbi molestie hendrerit
                     {{
                         html.button({
                             'class': 'btn--primary',
-                            'label': 'Submit for Approval',
+                            'label': 'Send for Approval',
                             'type': 'submit',
                         })
                     }}
