--- a/views/playground/workflow-comments/final-approver/tab_one.html.twig
+++ b/views/playground/workflow-comments/final-approver/tab_one.html.twig
@@ -96,53 +96,7 @@
     </style>
 
 
-    {% set note = ' "Please review this content." ' %}
 
-    {{
-        html.panel({
-            'title': 'Content Awaiting Approval',
-            'body':
-            '<div class="timeline__item" data-timestamp="2018-03-29T10:59:04+00:00" data-id="2650349">
-                <div class="timeline-avatar timeline-avatar--user">
-                    <span>AB</span>
-                </div>
-                <div class="timeline-content">
-                    <div class="timeline-content__inner">
-                        <h4 class="timeline-content__title">Alex Boring:
-
-                        </h4>
-
-                        <div class="timeline-content__date">
-                            <i data-toggle="tooltips" title="" aria-hidden="true" class="icon-clock-o icon--info u-hidden-print cursor-help" data-original-title="29 Mar 2018, 11:59 AM"></i>
-                            <time class="u-visible-print-inline">29 Mar 2018, 11:59 AM</time>
-                            <time class="timeago u-hidden-print" datetime="Thu, 29 Mar 2018 11:59:04 +0100" data-timezone="Europe/London">Thursday 29th March 2018 (11:59)</time>
-                        </div>
-
-                        <div class="timeline-content__body" data-id="2650349">
-                            <p id="message-120530" class="timeline-content__text">
-                                ' ~ note ~ '
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>',
-            'class': 'panel with-timeline u-margin-top-none',
-            'actions': [
-                {
-                    'label': 'Approve',
-                    'class': 'btn--success',
-                    'data-toggle': 'modal',
-                    'href': '#workflow-approve'
-                },
-                {
-                    'label': 'Reject',
-                    'class': 'btn--danger',
-                    'data-toggle': 'modal',
-                    'href': '#workflow-reject'
-                }
-            ]
-        })
-    }}
 
     {{
         form.create()
@@ -312,5 +266,50 @@ Cras eget elit maximus, facilisis ante sed, feugiat mi. Morbi molestie hendrerit
                 {{ form.end() }}
             </div><!-- /.modal__dialog -->
         </div><!-- /.modal -->
+
+    <div id="workflow-submit" class="modal modal__large">
+        <div class="modal__dialog">
+            <div class="modal__content">
+                <div class="modal__header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h1 class="modal__title">Send for Approval</h1>
+                </div>
+                <div class="modal__body">
+                    <p>By re-senting your content for approval, it will cancel the original request for approval and the reviewer will be notified.</p>
+                    <p>How do you want to proceed?</p>
+                    {{
+                        form.textarea({
+                            'label': 'Note to reviewer (optional)',
+                            'id': 'review-note',
+                            'class': 'form__group--full form__group--top form__group--flush u-margin-bottom-none',
+                            'rows': 5
+                        })
+                    }}
+                </div>
+                <div class="modal__footer">
+                    <button type="button" class="btn btn--primary">Send for Approval</button>
+                    <button type="button" class="btn btn--naked" data-dismiss="modal">Cancel</button>
+                </div>
+            </div><!-- /.modal__content -->
+        </div><!-- /.modal__dialog -->
+    </div><!-- /.modal -->
+
+    <div id="second-save" class="modal modal__large">
+        <div class="modal__dialog">
+            <div class="modal__content">
+                <div class="modal__header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h1 class="modal__title">Save</h1>
+                </div>
+                <div class="modal__body">
+                    <p>By saving your content, after sending it for approval, it will <strong>CANCEL APPROVAL</strong> of the original request and the reviewer will be notified.</p>
+                    <p>How do you want to proceed?</p>
+                </div>
+                <div class="modal__footer">
+                    <button type="button" class="btn btn--primary">Save</button>
+                    <button type="button" class="btn btn--naked" data-dismiss="modal">Cancel</button>
+                </div>
+            </div><!-- /.modal__content -->
+        </div><!-- /.modal__d
 
 {% endblock %}
