--- a/views/playground/workflow-comments/final-editor/tab_two.html.twig
+++ b/views/playground/workflow-comments/final-editor/tab_two.html.twig
@@ -66,7 +66,9 @@
         html.button({
             'label': 'Save',
             'class': '',
-            'disabled': true
+            'data-toggle': 'modal',
+            'type': 'link',
+            'href': '#second-save'
         })
     }}
     {{
@@ -76,7 +78,6 @@
             'data-toggle': 'modal',
             'type': 'link',
             'href': '#workflow-submit',
-            'disabled': true,
         })
     }}
 {%- endblock -%}
@@ -90,51 +91,9 @@
     }
 </style>
 
-    {% if _get.note is defined %}
-        {% set note = '"' ~ _get.note ~ '"' %}
-    {% endif %}
 
-    {{
-        html.panel({
-            'title': 'Content awaiting approval',
-            'body':
-            '<div class="timeline__item" data-timestamp="2018-03-29T10:59:04+00:00" data-id="2650349">
-                <div class="timeline-avatar timeline-avatar--user">
-                    <span>AB</span>
-                </div>
-                <div class="timeline-content">
-                    <div class="timeline-content__inner">
-                        <h4 class="timeline-content__title">Alex Bearing
 
-                        </h4>
-
-                        <div class="timeline-content__date">
-                            <i data-toggle="tooltips" title="" aria-hidden="true" class="icon-clock-o icon--info u-hidden-print cursor-help" data-original-title="29 Mar 2018, 11:59 AM"></i>
-                            <time class="u-visible-print-inline">10 Mar 2018, 10:01 AM</time>
-                            <time class="timeago u-hidden-print" datetime="Thu, 10 Mar 2018 10:01:04 +0100" data-timezone="Europe/London">Thursday 29th March 2018 (11:59)</time>
-                        </div>
-
-                        <div class="timeline-content__body" data-id="2650349">
-                            <p id="message-120530" class="timeline-content__text">
-                               ' ~ note ~ '
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>',
-            'class': 'panel with-timeline u-margin-top-none',
-            'actions': [
-                {
-                    'label': 'Cancel Approval',
-                    'class': 'btn--danger btn',
-                    'type': 'link',
-                    'href': 'index.html.twig'
-                }
-            ]
-        })
-    }}
-
-<div data-disable-ui="true">
+<div>
     {{
         form.create()
     }}
@@ -198,7 +157,8 @@ Cras eget elit maximus, facilisis ante sed, feugiat mi. Morbi molestie hendrerit
             'actions': [
                 form.submit({
                     'class': 'btn--primary',
-                    'label': 'Save'
+                    'label': 'Save',
+                    'href': '#second-save'
                 }),
                 html.button({
                     'class': '',
@@ -226,19 +186,38 @@ Cras eget elit maximus, facilisis ante sed, feugiat mi. Morbi molestie hendrerit
                     <h1 class="modal__title">Send for Approval</h1>
                 </div>
                 <div class="modal__body">
-                    <p>Before your content can be published a managing editor must review and approve it.</p>
-                    <p>You can provide useful notes here to aid their decision. You will be notified if your content has been approved or rejected.</p>
+                    <p>By re-sending your content for approval, it will cancel the original request. The reviewer will be notified.</p>
                     {{
                         form.textarea({
-                            'label': 'Note to reviewer (optional)',
+                            'label': 'Note to reviewer (optional) <span style="float: right;">Max: 255</span>',
                             'id': 'review-note',
                             'class': 'form__group--full form__group--top form__group--flush u-margin-bottom-none',
-                            'rows': 5
+                            'rows': 5,
+                            'maxlength': 255
                         })
                     }}
                 </div>
                 <div class="modal__footer">
                     <button type="button" class="btn btn--primary">Send for Approval</button>
+                    <button type="button" class="btn btn--naked" data-dismiss="modal">Cancel</button>
+                </div>
+            </div><!-- /.modal__content -->
+        </div><!-- /.modal__dialog -->
+    </div><!-- /.modal -->
+
+    <div id="second-save" class="modal modal__large">
+        <div class="modal__dialog">
+            <div class="modal__content">
+                <div class="modal__header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h1 class="modal__title">Save</h1>
+                </div>
+                <div class="modal__body">
+                    <p>By saving your content, after sending it for approval, it will <strong>CANCEL APPROVAL</strong> of the original request and the reviewer will be notified.</p>
+                    <p>How do you want to proceed?</p>
+                </div>
+                <div class="modal__footer">
+                    <button type="button" class="btn btn--primary">Save</button>
                     <button type="button" class="btn btn--naked" data-dismiss="modal">Cancel</button>
                 </div>
             </div><!-- /.modal__content -->
