--- a/views/playground/workflow-comments/nikos-version/index_two.html.twig
+++ b/views/playground/workflow-comments/nikos-version/index_two.html.twig
@@ -75,54 +75,82 @@
     {{ tabs.list(tabs_content) }}
 {% endblock %}
 
+{% block progresslist %}
+    <div class="progress-list">
+
+        <a href="#" class="progress-list__item">
+            <span class="progress-list__label">
+                <span class="badge badge--round badge--outline">Step 1</span>
+                Draft
+            </span>
+            <span class="progress-list__arrow">&gt;</span>
+        </a>
+
+        <a href="#" class="progress-list__item progress-list__item--complete">
+            <span class="progress-list__label">
+                <span class="badge badge--round badge--outline">Step 2</span>
+                Send for Approval
+            </span>
+            <span class="progress-list__arrow">&gt;</span>
+        </a>
+
+        <a href="#" class="progress-list__item">
+            <span class="progress-list__label">
+                <span class="badge badge--round badge--outline">Step 3</span>
+                Approve & Publish
+            </span>
+            <span class="progress-list__arrow">&gt;</span>
+        </a>
+
+    </div>
+{% endblock %}
+
 {%- block panel -%}
 
     {% if _get.note is defined %}
         {% set note = '"' ~ _get.note ~ '"' %}
     {% endif %}
 
-    <div class="panel with-timeline">
-        <div class="panel__title u-display-inline-block">Content Pending Approval</div>
-        <div class="progress-list progress-list-mini u-float-right">
-            <a href="#" class="progress-list__item progress-list__item--current">
-                <span class="progress-list__label">
-                    Draft
-                </span>
-                <span class="progress-list__arrow">&gt;</span>
-            </a>
+    {{
+        html.panel({
+            'title': 'Content awaiting approval',
+            'body':
+            '<div class="timeline__item" data-timestamp="2018-03-29T10:59:04+00:00" data-id="2650349">
+                <div class="timeline-avatar timeline-avatar--user">
+                    <span>AB</span>
+                </div>
+                <div class="timeline-content">
+                    <div class="timeline-content__inner">
+                        <h4 class="timeline-content__title">Alex Bearing [Editor]:
 
-            <a href="#" class="progress-list__item progress-list__item--intermediate">
-                <span class="progress-list__label">
-                    Pending Approval
-                </span>
-                <span class="progress-list__arrow">&gt;</span>
-            </a>
+                        </h4>
 
-            <a href="#" class="progress-list__item">
-                <span class="progress-list__label">
-                    Published
-                </span>
-                <span class="progress-list__arrow">&gt;</span>
-            </a>
-        </div>
-        <div class="panel__body">
-            <div class="timeline__item" data-timestamp="2018-03-29T10:59:04+00:00" data-id="2650349">
-                <div class="timeline-avatar timeline-avatar--user"><span>AB</span></div>
-                    <div class="timeline-content">
-                        <div class="timeline-content__inner"><h4 class="timeline-content__title">Alex Bearing [Editor]:</h4>
-                        <div class="timeline-content__date"><i aria-hidden="true" class="icon-clock-o icon--info u-hidden-print cursor-help"></i><time class="u-visible-print-inline">10 Mar 2018, 10:01 AM</time><time class="timeago u-hidden-print" datetime="Thu, 10 Mar 2018 10:01:04 +0100" data-timezone="Europe/London"> Thursday 29th March 2018 (11:59)</time></div>
+                        <div class="timeline-content__date">
+                            <i aria-hidden="true" class="icon-clock-o icon--info u-hidden-print cursor-help"></i>
+                            <time class="u-visible-print-inline">10 Mar 2018, 10:01 AM</time>
+                            <time class="timeago u-hidden-print" datetime="Thu, 10 Mar 2018 10:01:04 +0100" data-timezone="Europe/London">Thursday 29th March 2018 (11:59)</time>
+                        </div>
+
                         <div class="timeline-content__body" data-id="2650349">
-                            <p id="message-120530" class="timeline-content__text">"Test"</p>
+                            <p id="message-120530" class="timeline-content__text">
+                               ' ~ note ~ '
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="u-float-right" style="font-size: 12px;"><a href="#">View detailed history of comments here.</a></div>
-            <div class="panel__actions"><a href="index.html.twig" class="btn btn--danger">Cancel Approval</a></div>
-        </div>
-    </div>
-
-
+            <div class="u-float-right" style="font-size: 12px;">View previous workflow comments <a href="#">here</a>.</div>',
+            'class': 'panel with-timeline u-margin-top-none',
+            'actions': [
+                {
+                    'label': 'Cancel Approval',
+                    'class': 'btn--danger btn',
+                    'type': 'link',
+                    'href': 'index.html.twig'
+                }
+            ]
+        })
+    }}
 
 {%- endblock -%}
 
