--- a/views/playground/workflow-comments/final-approver/index_reject.html.twig
+++ b/views/playground/workflow-comments/final-approver/index_reject.html.twig
@@ -86,7 +86,7 @@
                 </span>
                 <span class="progress-list__arrow">&gt;</span>
             </a>
-            <a href="#" class="progress-list__item">
+            <a href="#" class="progress-list__item progress-list__item--grey">
                 <span class="progress-list__label">
                     Pending Approval
                 </span>
