Link fixes to table actions

--- a/views/playground/galaxies/sites.html.twig
+++ b/views/playground/galaxies/sites.html.twig
@@ -65,7 +65,7 @@
                 <td><a href="designer.html.twig">Godiva Festival</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -82,7 +82,7 @@
                 <td><a href="designer.html.twig">Oxford Town Hall</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -99,7 +99,7 @@
                 <td><a href="designer.html.twig">Oxford Town Hall</a></td>
                 <td>Japanese</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -116,7 +116,7 @@
                 <td><a href="designer.html.twig">Royal Pump Rooms</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -133,7 +133,7 @@
                 <td><a href="designer.html.twig">Royal Space Centre</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -150,7 +150,7 @@
                 <td><a href="designer.html.twig">St Mary's Guildhall</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -167,7 +167,7 @@
                 <td><a href="designer.html.twig">Visit Coventry and Warwickshire</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
@@ -184,7 +184,7 @@
                 <td><a href="designer.html.twig">War Memorial Park Tennis Club</a></td>
                 <td>English (EN)</td>
                 <td>
-                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'designer.html.twig' }) }}
+                    {{ html.link({ 'label': 'Settings', 'class': 'table-action', 'href': 'galaxies/designer.html.twig' }) }}
                     {{ html.link({ 'label': 'Control Center', 'class': 'table-action' }) }}
                     {{ html.link({ 'label': 'Visit Site', 'class': 'table-action' }) }}
                 </td>
