--- a/views/playground/workflow-comments/final-editor/base.html.twig
+++ b/views/playground/workflow-comments/final-editor/base.html.twig
@@ -150,6 +150,7 @@
                     {% endif %}
 
                     {% block tabs_list %}{% endblock %}
+                    {% block progresslistmini %}{% endblock %}
                     {% block progresslist %}{% endblock %}
                     {% block panel %}{% endblock %}
                     {% block tabs_content %}{% endblock %}
