Increase Specificity of Action Dropdown CSS Classes

--- a/stylesheets/_component.actionsbar.scss
+++ b/stylesheets/_component.actionsbar.scss
@@ -2,3 +2,11 @@
     margin-bottom: 16px;
     min-height: 32px;
 }
+
+.actionsbar--left-side {
+    float: left;
+}
+
+.actionsbar--right-side {
+    float: right;
+}
