--- a/stylesheets/_component.progress-lists.scss
+++ b/stylesheets/_component.progress-lists.scss
@@ -1,5 +1,6 @@
 .progress-list {
-    margin: 1em 0;
+    margin-bottom: 1em;
+    margin-top: 1em;
     overflow: hidden;
     width: 100%;
 
@@ -8,6 +9,325 @@
         table-layout: fixed;
     }
 }
+// Extras
+
+.progress-list-minialt {
+    display: inline-block;
+    margin-bottom: 0;
+
+    .progress-list-wrapper {
+        float: right;
+    }
+
+    .progress-list__item {
+        cursor: default;
+        font-size: 14px;
+        padding: .25em 0 .25em 32px;
+
+        &:hover {
+            background-color: $progress-bg;
+            color: color(black);
+
+            &::after {
+                border-top-color: transparent;
+                border-left-color: $progress-bg;
+            }
+        }
+    }
+
+    .progress-list__item--current {
+        &:hover {
+            background-color: color(primary);
+            color: color(primary, alt);
+
+            &::after {
+                border-top-color: transparent;
+                border-left-color: color(primary);
+            }
+        }
+    }
+}
+
+.progress-list-mini {
+    display: inline-block;
+    margin-top: 10px;
+    margin-right: 12px;
+    width: inherit;
+
+    .progress-list__item {
+        background-color: white;
+        border-bottom: 3px solid color(white);
+        box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0);
+        cursor: default;
+        color: color(black) !important;
+        font-size: 14px;
+        display: block;
+        padding: .55em 0 .55em 40px;
+        text-decoration: none;
+        vertical-align: top;
+
+        @include respond-min($screen-tablet) {
+            border: 0;
+            box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0);
+            display: table-cell;
+            padding: .25em 0 .25em 32px;
+        }
+
+        // scss-lint:disable DeclarationOrder
+        &:not(:last-child) {
+            @include css-arrow(10px, bottom, white);
+
+            &::before {
+                border-top-color: color(white);
+                border-width: 15px;
+                margin-left: -15px;
+            }
+
+            @include respond-min($screen-tablet) {
+                @include css-arrow(23px, right, white);
+                border-right: 3px solid color(white);
+
+                &::before {
+                    border-left-color: color(white);
+                    border-width: 27px;
+                    margin-left: 0;
+                    margin-top: -27px;
+                }
+
+                &::after {
+                    border-top-color: transparent;
+                    margin-left: 0;
+                }
+            }
+        }
+        // scss-lint:enable DeclarationOrder
+
+        &:first-child {
+            border-top-left-radius: $border-radius;
+            border-top-right-radius: $border-radius;
+
+            @include respond-min($screen-tablet) {
+                border-bottom-left-radius: $border-radius;
+                border-top-left-radius: $border-radius;
+                border-top-right-radius: 0;
+                padding-left: 15px;
+            }
+        }
+
+        &:last-child {
+            border-bottom: 0;
+            border-bottom-left-radius: $border-radius;
+            border-bottom-right-radius: $border-radius;
+            padding-right: 15px;
+
+            @include respond-min($screen-tablet) {
+                border-bottom-left-radius: 0;
+                border-bottom-right-radius: $border-radius;
+                border-top-right-radius: $border-radius;
+                padding-right: 15px;
+            }
+        }
+
+        &::before,
+        &::after {
+            z-index: 1;
+        }
+
+        &:hover {
+            background-color: white;
+            color: color(black);
+
+            &::after {
+                border-top-color: white;
+
+                @include respond-min($screen-tablet) {
+                    border-top-color: transparent;
+                    border-left-color: white;
+                }
+            }
+        }
+    }
+
+    .progress-list__label {
+        @include word-break-all;
+
+        display: inline-block;
+        position: relative;
+        text-align: left;
+        width: 100%;
+        z-index: 2;
+
+        .badge {
+            display: none;
+            margin-right: 5px;
+
+            @include respond-min($screen-desktop) {
+                display: inline-block;
+            }
+        }
+    }
+
+    .progress-list__arrow {
+        @extend %hide;
+    }
+
+    .progress-list__item--complete {
+        background-color: color(success);
+        color: white !important;
+
+        @include respond-min($screen-tablet) {
+            box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
+        }
+
+        .badge {
+            color: color(white) !important;
+        }
+
+        &:not(:last-child)::after {
+            border-top-color: color(success);
+
+            @include respond-min($screen-tablet) {
+                border-top-color: transparent;
+                border-left-color: color(success);
+            }
+        }
+
+        &:hover {
+            background-color: color(success);
+            color: white;
+
+            &::after {
+                border-top-color: color(success);
+
+                @include respond-min($screen-tablet) {
+                    border-top-color: transparent;
+                    border-left-color: color(success);
+                }
+            }
+        }
+    }
+
+    .progress-list__item--current {
+        background-color: color(primary);
+        color: white !important;
+
+        @include respond-min($screen-tablet) {
+            box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
+        }
+
+        .badge {
+            color: color(white) !important;
+        }
+
+        &:not(:last-child)::after {
+            border-top-color: color(primary);
+
+            @include respond-min($screen-tablet) {
+                border-left-color: color(primary);
+                border-top-color: transparent;
+            }
+        }
+
+        &:hover {
+            background-color: color(primary);
+            color: color(primary, alt);
+
+            &::after {
+                border-top-color: transparent;
+                border-left-color: color(primary);
+
+                @include respond-min($screen-tablet) {
+                    border-left-color: color(primary);
+                    border-top-color: transparent;
+                }
+            }
+        }
+    }
+
+    .progress-list__item--intermediate {
+        background-color: color(warning);
+        color: black;
+
+        @include respond-min($screen-tablet) {
+            box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
+        }
+
+        .badge {
+            color: color(white) !important;
+        }
+
+        &:not(:last-child)::after {
+            border-top-color: color(warning);
+
+            @include respond-min($screen-tablet) {
+                border-left-color: color(warning);
+                border-top-color: transparent;
+            }
+        }
+
+        &:hover {
+            background-color: color(warning);
+
+            &::after {
+                border-top-color: color(warning);
+
+                @include respond-min($screen-tablet) {
+                    border-left-color: color(warning);
+                    border-top-color: transparent;
+                }
+            }
+        }
+    }
+
+    .progress-list__item--grey {
+        background-color: $progress-bg;
+        color: black;
+
+        @include respond-min($screen-tablet) {
+            box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
+        }
+
+        .badge {
+            color: color(white) !important;
+        }
+
+        &:not(:last-child)::after {
+            border-top-color: $progress-bg;
+
+            @include respond-min($screen-tablet) {
+                border-left-color: $progress-bg;
+                border-top-color: transparent;
+            }
+        }
+
+        &:hover {
+            background-color: $progress-bg;
+
+            &::after {
+                border-top-color: $progress-bg;
+
+                @include respond-min($screen-tablet) {
+                    border-left-color: $progress-bg;
+                    border-top-color: transparent;
+                }
+            }
+        }
+    }
+}
+
+.progress-list--centred {
+    text-align: center;
+}
+
+.progress-list-wrapper {
+    display: inline-block;
+}
+
+.main-title-progresslist {
+    margin-top: 12px;
+}
+
+// Extras Finish
 
 .progress-list__item {
     background-color: $progress-bg;
@@ -195,264 +515,6 @@
         }
     }
 }
-
-.progress-list-mini {
-    @extend .progress-list;
-
-    display: inline-block;
-    margin: 1em;
-    width: auto;
-
-    @include respond-max($screen-tablet) {
-        width: 100%;
-    }
-
-    .progress-list__item {
-        @extend .progress-list__item;
-
-        background-color: color(white);
-        box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0);
-        cursor: default;
-        font-size: $font-size-small;
-        padding: .55em 0 .55em 40px;
-
-        @include respond-min($screen-tablet) {
-            box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0);
-            padding: .25em 0 .25em 32px;
-        }
-
-        // scss-lint:disable DeclarationOrder
-        &:not(:last-child) {
-            @include css-arrow(10px, bottom, color(white));
-
-
-            @include respond-min($screen-tablet) {
-                @include css-arrow(23px, right, color(white));
-
-                &::before {
-                    border-left-color: color(white);
-                    border-width: 27px;
-                    margin-left: 0;
-                    margin-top: -27px;
-                }
-
-                &::after {
-                    border-top-color: transparent;
-                    margin-left: 0;
-                }
-            }
-        }
-        // scss-lint:enable DeclarationOrder
-
-        &:first-child {
-            @include respond-min($screen-tablet) {
-                border-bottom-left-radius: $border-radius;
-                border-top-left-radius: $border-radius;
-                border-top-right-radius: 0;
-                padding-left: 15px;
-            }
-        }
-
-        &:last-child {
-            @include respond-min($screen-tablet) {
-                border-bottom-left-radius: 0;
-                border-bottom-right-radius: $border-radius;
-                border-top-right-radius: $border-radius;
-                padding-right: 15px;
-            }
-        }
-
-        &:hover {
-            background-color: color(white);
-
-            &::after {
-                border-top-color: color(white);
-
-                @include respond-min($screen-tablet) {
-                    border-top-color: transparent;
-                    border-left-color: color(white);
-                }
-            }
-        }
-    }
-
-    .progress-list__item--green {
-        background-color: color(success);
-        color: color(white);
-
-        @include respond-min($screen-tablet) {
-            box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
-        }
-
-        .badge {
-            color: color(white);
-        }
-
-        &:not(:last-child)::after {
-            border-top-color: color(success);
-
-            @include respond-min($screen-tablet) {
-                border-top-color: transparent;
-                border-left-color: color(success);
-            }
-        }
-
-        &:hover {
-            background-color: color(success);
-            color: white;
-
-            &::after {
-                border-top-color: color(success);
-
-                @include respond-min($screen-tablet) {
-                    border-top-color: transparent;
-                    border-left-color: color(success);
-                }
-            }
-        }
-    }
-
-    .progress-list__item--blue {
-        background-color: color(primary);
-        color: color(white) !important;
-
-        @include respond-min($screen-tablet) {
-            box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
-        }
-
-        .badge {
-            color: color(white);
-        }
-
-        &:not(:last-child)::after {
-            border-top-color: color(primary);
-
-            @include respond-min($screen-tablet) {
-                border-left-color: color(primary);
-                border-top-color: transparent;
-            }
-        }
-
-        &:hover {
-            background-color: color(primary);
-            color: color(primary, alt);
-
-            &::after {
-                border-top-color: transparent;
-                border-left-color: color(primary);
-
-                @include respond-min($screen-tablet) {
-                    border-left-color: color(primary);
-                    border-top-color: transparent;
-                }
-            }
-        }
-    }
-
-    .progress-list__item--orange {
-        background-color: color(warning);
-        color: black;
-
-        @include respond-min($screen-tablet) {
-            box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
-        }
-
-        .badge {
-            color: color(white);
-        }
-
-        &:not(:last-child)::after {
-            border-top-color: color(warning);
-
-            @include respond-min($screen-tablet) {
-                border-left-color: color(warning);
-                border-top-color: transparent;
-            }
-        }
-
-        &:hover {
-            background-color: color(warning);
-
-            &::after {
-                border-top-color: color(warning);
-
-                @include respond-min($screen-tablet) {
-                    border-left-color: color(warning);
-                    border-top-color: transparent;
-                }
-            }
-        }
-    }
-
-    .progress-list__item--grey {
-        background-color: $progress-bg;
-        color: color(black) !important;
-
-        @include respond-min($screen-tablet) {
-            box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
-        }
-
-        &:not(:last-child)::after {
-            border-top-color: $progress-bg;
-
-            @include respond-min($screen-tablet) {
-                border-left-color: $progress-bg;
-                border-top-color: transparent;
-            }
-        }
-
-        &:hover {
-            background-color: $progress-bg;
-
-            &::after {
-                border-top-color: $progress-bg;
-
-                @include respond-min($screen-tablet) {
-                    border-left-color: $progress-bg;
-                    border-top-color: transparent;
-                }
-            }
-        }
-    }
-
-    .progress-list__item--white {
-        background-color: color(white);
-        color: color(black) !important;
-
-        @include respond-min($screen-tablet) {
-            box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
-        }
-
-        &:not(:last-child)::after {
-            border-top-color: color(white);
-
-            @include respond-min($screen-tablet) {
-                border-left-color: color(white);
-                border-top-color: transparent;
-            }
-        }
-
-        &:hover {
-            background-color: color(white);
-
-            &::after {
-                border-top-color: color(white);
-
-                @include respond-min($screen-tablet) {
-                    border-left-color: color(white);
-                    border-top-color: transparent;
-                }
-            }
-        }
-    }
-}
-
-.progress-list--standalone {
-    float: right;
-    margin: 1em 0;
-}
-
-// Extras Finish
 
 @include ie-lte(8) {
     .progress-list__item:nth-of-type(1) {
